test(ose-lms-be-e2e): prove the LMS backend over real HTTP
Adds apps/ose-lms-be-e2e, a Playwright + playwright-bdd suite that runs the
four LMS backend scenarios against a really-started jar over real HTTP,
closing the E2E layer the BDD contract requires alongside the Unit layer DU3
delivered.

The suite starts ose-lms-be from its built bootable jar on a dedicated port
8403, so it never contends with a developer's dev session or the exploratory
testing step on 8303. The jar is discovered rather than hard-coded, because
its name carries the project version and a bump must not silently break the
suite.

Also reconciles what DU3 deferred or left inconsistent:

- ose-lms-be gains the e2e behaviour-coverage adapter and a
  test:coverage:e2e target, so both adapters are measured.
- The health and hello contract paths document their 405 response, and a
  shared ErrorResponse schema is added; this closes the one spec gap the
  exploratory testing pass found that a contract edit could close.
- docs/reference/monorepo-structure.md and apps/README.md list both LMS
  projects.
- package-lock.json gains the new workspace entries, without which CI's
  npm ci would fail.

Cost and benefit of the new code: the suite adds one process supervisor
(steps/backend-process.ts, ~100 lines) and four step bindings that mirror the
Java Unit adapter's expressions. Everything else is configuration. The
benefit is that the LMS backend's HTTP contract — status codes, bodies, and
Actuator exposure — is now asserted against the real server rather than a
mock, which is the only layer that can catch a misconfigured port, a
non-booting jar, or an Actuator endpoint accidentally exposed.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_015a9spDQ3PoMFNAoNLMT1VX